k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pam-coupon
  labels:
    name: pam-coupon
    purpose: digital-coupon-system
